--- a/rename project/index.html
+++ b/rename project/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+modify before rename<!DOCTYPE html>
 <!--
     Licensed to the Apache Software Foundation (ASF) under one
     or more contributor license agreements.  See the NOTICE file
